--- a/style.css
+++ b/style.css
@@ -1,49 +1,69 @@
 html, body {
     margin: 0;
-    padding: 0;
-    background-color: black;
-    color: white;
+    padding: 0;;
 }
 
-img {
+body {
+    font-family: helvetica, sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+ }
 
+ .movie-container {
+    padding: 0.75em;
+    border-radius: 10%;
+ }
+
+img {
     width:100%;
     max-height:100%;    
 }
 
-
+button:hover,
+button:focus {
+    background-color: hotpink;
+}
 .btn {
-    background-color: white;
-    border-radius: 100%;
+    border: 1px solid 0d0d0d;
+    border-radius: 50%;
     width: 50px;
     height: 50px;
     max-width:100%;
     max-height:100%; 
+    padding: 1em;
 } 
 .container {
-    position: relative;
-    text-align: center;
-    color: black;
-    
+    background-color: #0d0d0d;
+    color: #f5f5f5; 
+    width: 400px;
   }
-
-h1 {
-    color: white;
-    font-size: 60px;
-}
 
 #match-percentage {
     color: green;
+    font-weight: bold;
 }
   #rating {
       width: 50px;
       height: 50px;
   }
 
-  #length {
-      color: white;
+  #buttons,
+  #movie-info
+   {
+    display: flex;
+    justify-content: space-between;
+    padding: 0.5rem;
   }
+  
 
-  #genre {
-      color: white;
+    ul#genre-description li {
+		float: left;
+        justify-content: space-between;
+       margin: 20px;
+       padding-left: 10px;
+       margin-left: 20px;
+	}
+    li:first-child {
+    list-style-type: none;
   }
