--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html, body {
     margin: 0;
-    padding: 0;;
+    padding: 0;
 }
 
 body {
@@ -12,12 +12,14 @@ body {
 
  .movie-container {
     padding: 0.75em;
-    border-radius: 10%;
+    
  }
 
 img {
-    width:100%;
-    max-height:100%;    
+    max-width:100%;
+    max-height:100%; 
+    object-fit: cover;
+    
 }
 
 button:hover,
@@ -37,6 +39,8 @@ button:focus {
     background-color: #0d0d0d;
     color: #f5f5f5; 
     width: 400px;
+    border: 20px solid hotpink;
+    border-radius: 80px;
   }
 
 #match-percentage {
